# Katamari-Damacy-Clone

./: README.md  ash-test.txt
katamari/: CMakeLists.txt  Frame.obj.rar
katamari/models/: Frame.blend  Frame.mtl
katamari/shaders/: fshader_Ship.glsl  shader.cpp  shader.cpp.in  shader.h  vshader_Prince.glsl
katamari/source/: Balls.cpp  Balls.h  Bullet_particle.cpp  Bullets.cpp  Bullets.h  Chicks.cpp  Chicks.h  Kids.cpp  Kids.h  Legos.cpp  Legos.h  Obstacle.h  Prince.cpp  Prince.h  Rooms.cpp  Rooms.h  Sharks.cpp  Sharks.h  common.h  inside_outside.cpp  main.cpp  objloader.cpp  objloader.h  text.cpp
katamari/source/utils/: Angel.h  CheckError.h  mat.h
